<resources>
    <string name="app_name">My App2</string>
    <string name="action_settings">Settings</string>
    <string name="player_list_fragment_label">Player List</string>
    <string name="player_edit_fragment_label">Player Edit</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="player_name">Player name:</string>
    <string name="person_who_requested">Player\'s number:</string>
    <string name="ppg">How many point per game</string>
    <string name="is_the_player_romanian">Is the Player Romanian?</string>
</resources>